--- a/admin/templates/header.hbs
+++ b/admin/templates/header.hbs
@@ -7,7 +7,10 @@
     <span class="icon-bar"></span>
   </button>
   {{/if}}
-  <a class="navbar-brand" href="/">Capot Admin</a>
+  <a class="navbar-brand" href="/">
+    <img src="favicons/favicon-32x32.png" width="24" />
+    Capot Admin
+  </a>
 </div>
 
 {{#if userCtx.name}}
