--- a/admin/templates/config.hbs
+++ b/admin/templates/config.hbs
@@ -1,24 +1,29 @@
 <h1 class="page-header">{{ glyphicon 'cog' }} Configuration</h1>
 
-<div class="panel panel-default smtp-config">
+<div class="panel panel-default mailer-config">
   <div class="panel-heading">
     <h3 class="panel-title">{{ glyphicon 'send' }} Outgoing Mail</h3>
   </div>
   <div class="panel-body">
-    <form role="form" id="smtp-form">
+    <form role="form" id="mailer-form">
       <div class="form-group">
-        <label for="smtp-service">Service</label>
-        {{ smtpServicePicker smtp.service }}
+        <label for="mailer-from">From</label>
+        <input type="text" class="form-control" name="mailer-from"
+          id="mailer-from" value="{{mailer.from}}">
       </div>
       <div class="form-group">
-        <label for="smtp-user">Username</label>
-        <input type="text" class="form-control" name="smtp-user"
-          id="smtp-user" value="{{smtp.user}}">
+        <label for="mailer-service">Service</label>
+        {{ mailerServicePicker mailer.service }}
       </div>
       <div class="form-group">
-        <label for="smtp-pass">Password</label>
-        <input type="password" class="form-control" name="smtp-pass"
-          id="smtp-pass" value="{{smtp.pass}}">
+        <label for="mailer-user">Username</label>
+        <input type="text" class="form-control" name="mailer-user"
+          id="mailer-user" value="{{mailer.user}}">
+      </div>
+      <div class="form-group">
+        <label for="mailer-pass">Password</label>
+        <input type="password" class="form-control" name="mailer-pass"
+          id="mailer-pass" value="{{mailer.pass}}">
       </div>
       <button type="submit" class="btn btn-primary">Update</button>
     </form>
