--- a/admin/templates/config.hbs
+++ b/admin/templates/config.hbs
@@ -1,6 +1,27 @@
 <h1 class="page-header">{{ glyphicon 'cog' }} Configuration</h1>
 
-<div class="panel panel-default mailer-config">
+<div class="panel panel-default">
+  <div class="panel-heading">
+    <h3 class="panel-title">{{ glyphicon 'globe' }} General</h3>
+  </div>
+  <div class="panel-body">
+    <form role="form" id="app-form">
+      <div class="form-group">
+        <label for="app-name">App name</label>
+        <input type="text" class="form-control" name="app-name"
+          id="app-name" value="{{app.name}}">
+      </div>
+      <div class="form-group">
+        <label for="app-url">App URL</label>
+        <input type="text" class="form-control" name="app-url"
+          id="app-url" value="{{app.url}}">
+      </div>
+      <button type="submit" class="btn btn-primary">Update</button>
+    </form>
+  </div>
+</div>
+
+<div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">{{ glyphicon 'send' }} Outgoing Mail</h3>
   </div>
@@ -30,7 +51,7 @@
   </div>
 </div>
 
-<div class="panel panel-default analytics-config">
+<div class="panel panel-default">
   <div class="panel-heading">
     <h3 class="panel-title">{{ glyphicon 'stats' }} Analytics</h3>
   </div>
