--- a/admin/templates/header.hbs
+++ b/admin/templates/header.hbs
@@ -16,8 +16,9 @@
 {{#if userCtx.name}}
 <div class="collapse navbar-collapse" id="main-menu">
   <ul class="nav navbar-nav">
-    <li class="active"><a href="/users">{{glyphicon 'user'}} Users</a></li>
+    <li><a href="/users">{{glyphicon 'user'}} Users</a></li>
     <li><a href="/config">{{glyphicon 'cog'}} Configuration</a></li>
+    <li><a href="/emails">{{glyphicon 'envelope'}} Mail templates</a></li>
     <li class="divider"></li>
     <li><a href="#" data-action="signout">{{glyphicon 'log-out'}} Sign Out</a></li>
   </ul>
