--- a/admin/templates/config.hbs
+++ b/admin/templates/config.hbs
@@ -53,16 +53,30 @@
 
 <div class="panel panel-default">
   <div class="panel-heading">
-    <h3 class="panel-title">{{ glyphicon 'stats' }} Analytics</h3>
+    <h3 class="panel-title">{{ glyphicon 'lock' }} OAuth</h3>
   </div>
   <div class="panel-body">
-    <form role="form" id="analytics-config-form">
-      <div class="form-group">
-        <label for="analytics-google-tracking-id">Google Analytics Tracking ID</label>
-        <input type="text" class="form-control"
-          name="analytics-google-tracking-id" id="analytics-google-tracking-id"
-          value="{{analytics.google.trackingId}}">
-      </div>
+
+    <form role="form" id="oauth-form">
+      {{#each oauth.providers}}
+      <fieldset>
+        <h2>{{@key}}</h2>
+        <div class="checkbox">
+          <label>
+            <input type="checkbox" id="{{@key}}-enabled"{{#if enabled}}checked{{/if}}> Enabled
+          </label>
+        </div>
+        <div class="form-group">
+          <label for="{{@key}}-key">Client ID</label>
+          <input class="form-control" id="{{@key}}-key" value="{{key}}" placeholder="Enter your {{@key}} Client ID">
+        </div>
+        <div class="form-group">
+          <label for="{{@key}}-secret">Client Secret</label>
+          <input class="form-control" id="{{@key}}-secret" value="{{secret}}" placeholder="Enter your {{@key}} Client Secret">
+        </div>
+      </fieldset>
+      {{/each}}
+
       <button type="submit" class="btn btn-primary">Update</button>
     </form>
   </div>
